array.island.Island.scala.error
Erreur de compilation :
Island:7: error: not found: type i
    if(num[i] - previousLevel == 1){
           ^Island:7: error: value num of type Array[Int] does not take type parameters.
    if(num[i] - previousLevel == 1){
          ^Island:10: error: not found: type i
    previousLevel = num[i]
                        ^Island:10: error: value num of type Array[Int] does not take type parameters.
    previousLevel = num[i]
                       ^